--- a/Swoosh/Swoosh/View/Base.lproj/Main.storyboard
+++ b/Swoosh/Swoosh/View/Base.lproj/Main.storyboard
@@ -125,6 +125,9 @@
                                         <state key="normal" title="Mens">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="mensBtnAction:" destination="lqC-jr-uFs" eventType="touchUpInside" id="Mrf-D0-MTp"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hfj-Lm-3eo" customClass="CustomButton" customModule="Swoosh" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="87" width="380" height="56"/>
@@ -136,6 +139,9 @@
                                         <state key="normal" title="Womens">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="womensBtnAction:" destination="lqC-jr-uFs" eventType="touchUpInside" id="q4o-zq-iDj"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d9h-gx-vBc" customClass="CustomButton" customModule="Swoosh" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="174" width="380" height="56"/>
@@ -147,10 +153,13 @@
                                         <state key="normal" title="Co-ed">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="coedBtnAction:" destination="lqC-jr-uFs" eventType="touchUpInside" id="8L4-sA-K3e"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Aop-Tz-Y6t" customClass="CustomButton" customModule="Swoosh" customModuleProvider="target">
+                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Aop-Tz-Y6t" customClass="CustomButton" customModule="Swoosh" customModuleProvider="target">
                                 <rect key="frame" x="24" y="758" width="380" height="56"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.40092572770000001" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -200,6 +209,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="NXN-5L-JZe"/>
                     <connections>
+                        <outlet property="nextBtn" destination="Aop-Tz-Y6t" id="uJl-f6-gqT"/>
                         <segue destination="Vwb-WA-dBu" kind="show" identifier="skillVCSegue" id="RYs-tA-RRT"/>
                     </connections>
                 </viewController>
